--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,8 +1,20 @@
-<h4>ユーザー一覧（管理者）</h4>
-<% @user.each do |user| %>
-   <table>
-       <tr>
-           <td><%= link_to user.name, admins_customer_path(user.id) %></td>
-       </tr>
-   </table>
-<% end %>
+<div class="user-list-container">
+  <h2 class="user-list-title">ユーザー一覧（管理者）</h2>
+
+  <table class="user-table">
+    <thead>
+      <tr>
+        <th>ユーザー名</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td>
+            <%= link_to user.name, admins_user_path(user.id), class: "user-link" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
