--- a/app/views/users/comments/show.html.erb
+++ b/app/views/users/comments/show.html.erb
@@ -1,14 +1,15 @@
 <h2 class="comment-title">コメント詳細</h2>
 
-<div class="comment-container">
-  <table class="comment-table">
-    <tbody>
-      <tr>
-        <td class="comment-text"><%= @comment.comment %></td>
-        <td class="comment-actions">
-          <%= link_to "削除", strategy_comment_path(@comment.id), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-delete" %>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div class="comment-detail-container">
+  <div class="comment-detail-text">
+    <%= @comment.comment %>
+  </div>
+
+  <!-- ボタン -->
+  <div class="comment-actions">
+    <% if user_signed_in? %>
+      <%= link_to "削除", strategy_comment_path(@comment.id), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-delete" %>
+      <%= link_to "戻る", strategy_path(@comment.strategy_id), class: "btn btn-secondary" %>
+    <% end %>
+  </div>
 </div>
