--- a/app/views/users/strategies/new.html.erb
+++ b/app/views/users/strategies/new.html.erb
@@ -1,20 +1,22 @@
-<div class="strategy-edit-container">
-  <h3 class="title">攻略情報編集画面（ユーザー）</h3>
-  
-  <%= form_with model: @strategy, class: "strategy-form" do |f| %>
-  <%= f.hidden_field :game_id, value: @game.id %>
-    <div class="strategy-form-group">
-      <label for="title">タイトル名</label>
-      <%= f.text_field :title, class: "form-control", placeholder: "タイトルを入力してください" %>
+<div id="strategy">
+  <div class="strategy-edit-container">
+    <h3 class="title">攻略情報編集画面（ユーザー）</h3>
+    
+    <%= form_with model: @strategy, class: "strategy-form" do |f| %>
+    <%= f.hidden_field :game_id, value: @game.id %>
+      <div class="strategy-form-group">
+        <label for="title">タイトル名</label>
+        <%= f.text_field :title, class: "form-control", placeholder: "タイトルを入力してください" %>
+      </div>
+      <div class="strategy-form-group">
+        <label for="body">本文</label>
+        <%= f.text_area :body, class: "form-control", rows: 5, placeholder: "本文を入力してください" %>
+      </div>
+      <div class="form-actions">
+    <div class="button-wrapper">
+      <%= f.submit "保存", class: "btn btn-primary" %>
     </div>
-    <div class="strategy-form-group">
-      <label for="body">本文</label>
-      <%= f.text_area :body, class: "form-control", rows: 5, placeholder: "本文を入力してください" %>
-    </div>
-    <div class="form-actions">
-  <div class="button-wrapper">
-    <%= f.submit "保存", class: "btn btn-primary" %>
   </div>
-</div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
