--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -7,7 +7,7 @@
     <% if @user.image.attached? %>
       <%= image_tag @user.image, size: "200x200" %>
     <% else %>
-      <%= image_tag 'no_image.web', size: "200x200" %>
+      <%= image_tag 'no_image.webp', size: "200x200" %>
     <% end %>
   </div>
 
