--- a/app/views/users/comments/show.html.erb
+++ b/app/views/users/comments/show.html.erb
@@ -2,6 +2,7 @@
 
 <div class="comment-detail-container">
   <div class="comment-detail-text">
+    <% if current_user>
     <%= @comment.comment %>
   </div>
 
